--- a/package.xml
+++ b/package.xml
@@ -22,10 +22,10 @@
   <email>remi@php.net</email>
   <active>yes</active>
  </lead>
- <date>2016-10-21</date>
- <time>14:00:00</time>
+ <date>2017-01-16</date>
+ <time>08:00:00</time>
  <version>
-  <release>5.1.7</release>
+  <release>5.1.8</release>
   <api>5.1.2</api>
  </version>
  <stability>
@@ -34,8 +34,9 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-- fixes gh#19: hung apaches on pthread wrlocks
-- fixes gh#203: segfaults in bailout / longjmp
+- fix gh#207 Segmentation fault in apc_sma_api_free()
+- fix gh#221 memory leak
+- update to apc dashboard (Tyson Andre)
  </notes>
  <contents>
   <dir name="/">
@@ -145,6 +146,22 @@
   <configureoption name="enable-apcu-debug" default="no" prompt="Enable internal debugging in APCu" />
  </extsrcrelease>
  <changelog>
+  <release>
+   <date>2016-10-21</date>
+   <version>
+    <release>5.1.7</release>
+    <api>5.1.2</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+- fixes gh#19: hung apaches on pthread wrlocks
+- fixes gh#203: segfaults in bailout / longjmp
+   </notes>
+  </release>
   <release>
    <date>2016-10-06</date>
    <version>
