--- a/package.xml
+++ b/package.xml
@@ -25,7 +25,7 @@
  <date>2017-01-16</date>
  <time>08:00:00</time>
  <version>
-  <release>5.1.8</release>
+  <release>5.1.9dev</release>
   <api>5.1.2</api>
  </version>
  <stability>
@@ -34,9 +34,7 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-- fix gh#207 Segmentation fault in apc_sma_api_free()
-- fix gh#221 memory leak
-- update to apc dashboard (Tyson Andre)
+-
  </notes>
  <contents>
   <dir name="/">
@@ -146,6 +144,23 @@
   <configureoption name="enable-apcu-debug" default="no" prompt="Enable internal debugging in APCu" />
  </extsrcrelease>
  <changelog>
+  <release>
+   <date>2017-01-16</date>
+   <version>
+    <release>5.1.8</release>
+    <api>5.1.2</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+- fix gh#207 Segmentation fault in apc_sma_api_free()
+- fix gh#221 memory leak
+- update to apc dashboard (Tyson Andre)
+   </notes>
+  </release>
   <release>
    <date>2016-10-21</date>
    <version>
