add extension_dir to ini - 3

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,9 +44,13 @@ build_script:
 
     echo extension=php_apcu.dll >> C:\projects\apcu\bin\modules.d\apcu.ini
 
-    C:\projects\apcu\bin\php.exe -m
+    type C:\projects\apcu\bin\modules.d\apcu.ini
 
-    C:\projects\apcu\bin\php-cgi.exe -m
+    cd C:\projects\apcu\bin
+
+    php.exe -m
+
+    php-cgi.exe -m
 test_script:
 - cmd: C:\projects\apcu\bin\php.exe -doutput_buffering=0 run-tests.php ext\apcu -p C:\projects\apcu\bin\php.exe -q --show-diff
 artifacts:
