--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,13 +48,11 @@ build_script:
 
     type C:\projects\apcu\bin\modules.d\apcu.ini
 
-    cd C:\projects\apcu\bin
-
     C:\projects\apcu\bin\php.exe -m
 
     C:\projects\apcu\bin\php-cgi.exe -m
 test_script:
-- cmd: C:\projects\apcu\bin\php.exe -doutput_buffering=0 C:\projects\php-src\run-tests.php ext\apcu -p C:\projects\apcu\bin\php.exe -q --show-diff
+- cmd: C:\projects\apcu\bin\php.exe -doutput_buffering=0 run-tests.php ext\apcu -p C:\projects\apcu\bin\php.exe -q --show-diff
 artifacts:
   - path: bin
     name: master
