--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: '{branch}.{build}'
 
 os: 
-  - Windows Server 2008 R2
+  - Windows Server 2008
 
 environment:
   REPORT_EXIT_STATUS: 1
@@ -18,6 +18,8 @@ install:
 
 build_script:
 - cmd: >-
+    ver
+
     "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" %BUILD_ENV%
 
     wget http://windows.php.net/downloads/php-sdk/php-sdk-binary-tools-20110915.zip
@@ -49,8 +51,6 @@ build_script:
     nmake install
 
     copy php.ini-development C:\projects\apcu\bin\php.ini
-
-    ver
 
     C:\projects\apcu\bin\php.exe -d extension_dir=C:\projects\apcu\bin\ext\ -d extension=php_apcu.dll -m
 
