--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,11 @@ win32/phpts.def
 win32/wsyslog.h
 win32/win32.dsp
 win32/php.dsw
+
+Makefile.global
+acinclude.m4
+apc_lock.loT
+build/
+configure.in
+ltmain.sh
+run-tests.php
