--- a/package.xml
+++ b/package.xml
@@ -24,7 +24,7 @@
  </lead>
  <date>2018-01-02</date>
  <version>
-  <release>5.1.9</release>
+  <release>5.1.10dev</release>
   <api>5.1.2</api>
  </version>
  <stability>
@@ -33,13 +33,7 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-- fix gh#234 mmap disabled when configure is called with --enable-apcu-mmap
-- fix gh#226 Warning: apcu_fetch(): apc_fetch() expects a string or array of strings.
-- mitigate gh#223 Fatal error when starting php on windows
-- add support for PCRE2 in 7.3
-- use row formatting for information in phpinfo() tables
-- set IS_STR_PERSISTENT so refcounting failures are reported by -DRC_DEBUG=1
-- fix gh#266 refcounting errors in APCIterator
+-
  </notes>
  <contents>
   <dir name="/">
@@ -150,6 +144,27 @@
   <configureoption name="enable-apcu-debug" default="no" prompt="Enable internal debugging in APCu" />
  </extsrcrelease>
  <changelog>
+  <release>
+   <date>2018-01-02</date>
+   <version>
+    <release>5.1.9</release>
+    <api>5.1.2</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+- fix gh#234 mmap disabled when configure is called with --enable-apcu-mmap
+- fix gh#226 Warning: apcu_fetch(): apc_fetch() expects a string or array of strings.
+- mitigate gh#223 Fatal error when starting php on windows
+- add support for PCRE2 in 7.3
+- use row formatting for information in phpinfo() tables
+- set IS_STR_PERSISTENT so refcounting failures are reported by -DRC_DEBUG=1
+- fix gh#266 refcounting errors in APCIterator
+   </notes>
+  </release>
   <release>
    <date>2017-01-16</date>
    <version>
