1 more changelog entry

--- a/package.xml
+++ b/package.xml
@@ -34,6 +34,8 @@
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
 - fix gh#247 when a NUL char is used as key, apcu_fetch(array) truncates the key
+- fix gh#248 apcu_fetch may return values causing zend_mm_corruption or segfaults
+  when custom serializer is used
 - fix crash when passing bad array to apcu_delete
 - fix gh#274 Fix crash when passing bad array to apcu_delete
 - improve fix gh#266 refcounting errors in APCIterator
