--- a/package.xml
+++ b/package.xml
@@ -36,8 +36,9 @@
 - fix gh#247 when a NUL char is used as key, apcu_fetch(array) truncates the key
 - fix gh#248 apcu_fetch may return values causing zend_mm_corruption or segfaults
   when custom serializer is used
+- fix gh#260 apcu.serializer=default results in segfault
+- fix gh#274 non-portable shell == in config.m4
 - fix crash when passing bad array to apcu_delete
-- fix gh#274 Fix crash when passing bad array to apcu_delete
 - improve fix gh#266 refcounting errors in APCIterator
 - fix for PHP 7.3 compatibility
  </notes>
