Use the official snippet to catch the exit status

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -120,7 +120,7 @@ build_script:
                 $runner = 'c:\build-cache\php-sdk-' + $env:BIN_SDK_VER + '\phpsdk' + '-' + $env:VC + '-' + $env:ARCH + '.bat'
                 $task = $here + '\task.bat'
                 & $runner -t $task
-                if (-not 0 -eq $LASTEXITCODE) { Exit($LASTEXITCODE); }
+                if($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode)  }
 
 after_build:
         ps: |
@@ -159,5 +159,5 @@ test_script:
                 $runner = 'c:\build-cache\php-sdk-' + $env:BIN_SDK_VER + '\phpsdk' + '-' + $env:VC + '-' + $env:ARCH + '.bat'
                 $task = $here + '\task.bat'
                 & $runner -t $task
-                if (-not 0 -eq $LASTEXITCODE) { Exit($LASTEXITCODE); }
+                if($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode)  }
 
