--- a/package.xml
+++ b/package.xml
@@ -36,6 +36,8 @@
 - fix gh#246 apcu_entry hangs
 - fix gh#281 undefined variable in apc.php
 - fix handling of fatal errors in apcu_entry
+- check string lengths when looking up keys
+- many internal C APIs changed
  </notes>
  <contents>
   <dir name="/">
