--- a/package.xml
+++ b/package.xml
@@ -22,9 +22,9 @@
   <email>remi@php.net</email>
   <active>yes</active>
  </lead>
- <date>2018-02-16</date>
+ <date>2018-03-08</date>
  <version>
-  <release>5.1.11dev</release>
+  <release>5.1.11</release>
   <api>5.1.11</api>
  </version>
  <stability>
@@ -63,11 +63,13 @@
     <file name="apc_014_store_ref.phpt" role="test" />
     <file name="apc_015.phpt" role="test" />
     <file name="apc_016.phpt" role="test" />
+    <file name="apc_017.phpt" role="test" />
     <file name="apc_099.phpt" role="test" />
     <file name="apc54_014.phpt" role="test" />
     <file name="apc54_018.phpt" role="test" />
     <file name="apc_entry_001.phpt" role="test" />
     <file name="apc_entry_002.phpt" role="test" />
+    <file name="apc_entry_003.phpt" role="test" />
     <file name="apc_inc_perf.phpt" role="test" />
     <file name="bug63224.phpt" role="test" />
     <file name="get_included_files_inc1.inc" role="test" />
