Add apcu_inc_request_time() function in debug build
To be used to test TTL behavior without sleep()s.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ php:
 
 script:
     - phpize
-    - ./configure
+    - ./configure --enable-apcu-debug
     - make
     - REPORT_EXIT_STATUS=1 php -n run-tests.php -n -d extension_dir=./modules/ -d extension=apcu.so -d apc.enable=1 -d apc.enable_cli=1 -p `phpenv which php` --show-diff --set-timeout 120
     - phpize --clean
     - phpize
-    - ./configure --disable-apcu-rwlocks
+    - ./configure --enable-apcu-debug --disable-apcu-rwlocks
     - make
     - REPORT_EXIT_STATUS=1 php -n run-tests.php -n -d extension_dir=./modules/ -d extension=apcu.so -d apc.enable=1 -d apc.enable_cli=1 -p `phpenv which php` --show-diff --set-timeout 120
 
