Fix PHP bug #76145
Usually Serializer::(un)serialize() operations on a shared
(un)serialization context. However, the APCu (un)serialization is
unrelated to the outer (un)serialization, so acquire a serialization
lock to prevent context sharing.

--- a/package.xml
+++ b/package.xml
@@ -44,6 +44,7 @@
  - Fix --enable-apcu-clear-signal support.
  - Show entries with expired global TTL in APCuIterator.
  - Respect TTL when calculating APCuIterator totals.
+ - PHP bug #76145: Fix use of APCu inside Serializer::(un)serialize().
  - gh#295: Improve APCuIterator performance by using PCRE JIT and preallocating key strings.
  - Reduce the memory overhead of cache entries.
  - Prevent potential memory corruption in the cache slam defense implementation.
