Per-entry TTL always has precedence over global TTL
This is part of #291. Previously apcu_store() removed entries those
global TTL has expired, even if a longer per-entry TTL was specified.
Now the per-entry TTL always takes precedence.

Also add a set of helper functions for checking expiry. They are not
yet used everywhere, as the semantics are not consistent...

--- a/package.xml
+++ b/package.xml
@@ -44,6 +44,7 @@
  - Fix --enable-apcu-clear-signal support.
  - Show entries with expired global TTL in APCuIterator.
  - Respect TTL when calculating APCuIterator totals.
+ - The per-entry TTL now always takes precedence over the global TTL.
  - PHP bug #76145: Fix use of APCu inside Serializer::(un)serialize().
  - gh#304: If apcu_cas() is used on a non-existing entry, don't insert it.
  - gh#295: Improve APCuIterator performance by using PCRE JIT and preallocating key strings.
