--- a/package.xml
+++ b/package.xml
@@ -45,6 +45,7 @@
  - Show entries with expired global TTL in APCuIterator.
  - Respect TTL when calculating APCuIterator totals.
  - The per-entry TTL now always takes precedence over the global TTL.
+ - The global TTL is now always relative to the access time.
  - PHP bug #76145: Fix use of APCu inside Serializer::(un)serialize().
  - gh#304: If apcu_cas() is used on a non-existing entry, don't insert it.
  - gh#295: Improve APCuIterator performance by using PCRE JIT and preallocating key strings.
